--- a/style.css
+++ b/style.css
@@ -32,7 +32,8 @@ html, body {
     align-items: center;
     justify-content: center;
     gap: 1rem;
-    padding: 2rem 2.5rem;
+    max-width: 320px;
+    margin: 30px auto;
 }
 
 input {
@@ -43,6 +44,7 @@ input {
     padding: 1rem;
     border-radius: .5rem;
     font-size: 1.25rem;
+    font-family: 'Rubik', sans-serif;
     text-align: center;
 }
 
@@ -58,5 +60,7 @@ button {
     padding: 1rem;
     border-radius: .5rem;
     font-size: 1.25rem;
+    font-family: 'Rubik', sans-serif;
+    font-weight: 300;
     cursor: pointer;
 }
