--- a/style.css
+++ b/style.css
@@ -25,6 +25,8 @@ html, body {
     padding: 0;
     font-family: 'Rubik', sans-serif;
     background-color: #EEF0F4;
+    color: #432000;
+    user-select: none;
 }
 
 /* container styles */
@@ -48,6 +50,7 @@ input {
     font-size: 1.25rem;
     font-family: 'Rubik', sans-serif;
     text-align: center;
+    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2);
 }
 
 input::placeholder {
@@ -65,6 +68,12 @@ button {
     font-family: 'Rubik', sans-serif;
     font-weight: 300;
     cursor: pointer;
+    transition: all .1s ease-in-out;
+    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2);
+}
+
+button:hover {
+    background-color: #832536;
 }
 
 ul {
@@ -81,4 +90,10 @@ ul li {
     flex-grow: 1;
     text-align: center;
     box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2);
+    transition: all .1s ease-in-out;
+    cursor: pointer;
+}
+
+ul li:hover {
+    background-color: #FFECC7;
 }
