--- a/style.css
+++ b/style.css
@@ -40,6 +40,15 @@ html, body {
     margin: 30px;
 }
 
+.logo {
+    width: 100%;
+}
+
+.logo i {
+    color: var(--color-red);
+    font-size: 1.5rem;
+}
+
 input {
     color: #432000;
     background-color: var(--color-white-off);
