--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ input {
     font-size: 1.25rem;
     font-family: 'Rubik', sans-serif;
     text-align: center;
-    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
 }
 
 input::placeholder {
@@ -78,7 +78,7 @@ button {
     font-weight: 300;
     cursor: pointer;
     transition: all .1s ease-in-out;
-    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
 }
 
 button:hover {
@@ -98,11 +98,11 @@ ul li {
     border-radius: .5rem;
     flex-grow: 1;
     text-align: center;
-    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
     transition: all .1s ease-in-out;
     cursor: pointer;
 }
 
 ul li:hover {
-    background-color: #FFECC7;
+    background-color: #dbd6cb;
 }
